; Unit tests for internal modules of the Testo library and some "dummy" tests
(executable
 (name test)
 (modules Test)
 (libraries
    alcotest
    testo
 )
)

; A dummy test suite. This one fails, allowing us to check the
; quality of error reporting.
(executable
 (name failing_test)
 (modules Failing_test)
 (libraries
    testo
 )
)

; A dummy test suite used to test parallel execution
(executable
 (name parallel_test)
 (modules Parallel_test)
 (libraries
    testo
 )
)

; A dummy test suite to check that timeouts are handled correctly.
(executable
 (name timeout_test)
 (modules Timeout_test)
 (libraries
    testo
 )
)

; The test suite that exercises the dummy test suites in various ways
; and checks that it outputs what it's supposed to.
(executable
 (name meta_test)
 (modules Meta_test)
 (libraries
    testo
 )
)

; Test the export to Alcotest
(executable
 (name test_alcotest)
 (modules Test_alcotest)
 (libraries
    testo
    alcotest
 )
)
