(rule
 (alias runtest)
 (package testo-diff)
 (deps test.exe)
 (action (run ./test.exe))
)

; Test program for testo-diff. It doesn't use Testo to as to keep things
; simple and modular.
(executable
  (name test)
  (libraries
    testo-diff
  )
  (preprocess
    (pps
      ppx_deriving.show
    )
  )
)
